--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,8 +3,11 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 0;
+}
+
+body{
+  background-color: rgb(43, 43, 43);
 }
 
 .logo {
