--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,8 +22,9 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+  font-size: 2.4em;
+  line-height: 1.0;
+  font-weight: 400;
 }
 
 input:-webkit-autofill {
